Revision history for Gimp-Perl extension.

	- fixed sunos/solaris socketpair "protocol not implemented" problem.
        - disabled paintbrush in testsuite since it has different calling
          parameters in 1.1.
        - added use File::Basename to Fu.pm.

1.081 Thu May  6 19:33:37 CEST 1999
	- added "oneliners".
	- startet implementing Gimp::Module, for embedding perl directly into
	  the gimp.
	- added generic Gimp::Config module.
	- spit out a warning for unusual function names.
	- made Gimp->color_cube work.
	- added Gimp::init_gtk function to initialize Gtk in a Gimp-compatible
	  way.
	- replaced the default colour database by something far better ;)
	- exchanged order of some compiler commandline arguments.
	- improved Makefile support for embed.
        - added embed.
        - improved many parts of the build process.
        - updated ppport.h.
        - properly localized $_ in all subs.

1.08  Fri Apr  9 03:20:54 CEST 1999
	- added guidegrid, git-text, roundrectsel, repdup, centerguide,
          stampify, goldenmean, triangle, billboard, mirrorsplit.
        - improved error detection when some moron forgets to 'use strict'
          and tries to use undefined symbols.
        - added VALUE, RED, GREEN, BLUE constants for gimp_levels.
        - added WRAP, SMEAR, BLACK constants for plug_in_displace.
        - RUN_WITH_LAST_VALS is ignored if no LAST_VALS exist.
        - fixed a bug in Gimp::Data, FETCH returned undef for valid keys.
        - small compatibility fix in scm2scm.

1.072 Sat Mar 27 21:04:39 CET 1999
	- scripts will now be correctly installed when IN_GIMP.
        - test-dir was not removed by make distclean etc.
        - messages now only show up in the Perl Control Center.
          this is not correct, however ;)

1.071 Tue Mar 23 13:47:10 CET 1999
	- changed the definition of PF_RADIO, simplifying it (it ain't no C).
        - Gimp::Fu scripts try to run with default arguments if Gtk is not
          available.