@@ -39,9 +39,6 @@ register $regname, $shortdesc, $longdesc, $authorname, $author, $date, $path, $i
    [PF_SLIDER, "shinyness", "How shiny the final image will be",30, [0,90,5]],
    [PF_SLIDER, "depth_shape", "Determines the final shape", 34 , [0,64,32]],
    [PF_RADIO, "map", "The type of Map to use", 2, [Linear => 0, Spherical => 1, Sinusoidal => 2] ],
-  ],[],
-  [
-   'gimp-1.1',
   ], sub {
 
 my ($font, $text, $color1, $color2, $azimuth, $elevation, $depth, $maptype) = @_;
